-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0 Alpha
-
None
-
Linux, Windows,Mac
-
780e11cf38a98cd32b6a5aa44dbb4cbf0f5d5ff8 2dd530ca35032465d4e928aa7c8f29563eb0c5da 6b6ee829c7e0df302eba30ce1f96302c5661279c 309170a7f97759aa3f2e25a6c5202a6438a8bf4f
FAIL! : tst_Drawer::multiple() Compared values are not the same
Actual (leftClickSpy.count()): 0
Expected (1) : 1
Loc: [tst_drawer.cpp(698)]
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1503237759
- relates to
-
QTBUG-62631 Regression in childMouseEventFilter after wip/pointerhandler => dev merge
-
- Closed
-
- resulted in
-
QTBUG-70371 [REG 5.9->5.10]: When a PinchArea is on top of a Flickable that also has MouseAreas, then doing a pinch across different child items will not work
-
- Open
-
For Gerrit Dashboard: QTBUG-62628 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
202960,4 | WIP fix? | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
203026,2 | tst_Drawer: blacklist several test functions | dev | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
203093,11 | Restore filtering behavior | dev | qt/qtdeclarative | Status: MERGED | -2 | 0 |
207579,11 | pre-accept the mouse event before childMouseEventFilter; grab after | 5.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
207580,5 | Fix touch points delivered to the filtering parent | 5.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
207778,2 | remove blacklists | 5.10 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |