Fix touch points delivered to the filtering parent

The touchpoints delivered to the filtering parent should be the ones
that would be delivered to the original receiver (child item).  That
is the intent of filtering.

Task-number: QTBUG-62628
Change-Id: I7ed965c741aaec362f07d65cd6d0789c82ba71e3
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>